# df-diskcache

./: Makefile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  on_push_default_branch.yml  publish.yml
dfdiskcache/: __init__.py  __version__.py  _core.py  logger.py
examples/: dfdiskcache_usage.py
requirements/: requirements.txt
tests/: test_core.py
